--- a/css4/example2.css
+++ b/css4/example2.css
@@ -42,14 +42,17 @@ section{
    padding-top: 0.88rem;
 }
 section div{
+    position: relative;
     margin-top: 0.16rem;
     height: 1rem;
-    line-height: 1rem;
+    
     background-color: #fff;
 
 }
 section div img{
-    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     padding-left: 0.44em;
     padding-right: 0.46rem;
 }
@@ -58,13 +61,16 @@ section .phone img{
     height: 0.42rem;
 }
 section .lock img{
-    vertical-align: middle;
+    
     width: 0.3rem;
     height: 0.44rem;
 }
 section input{
-    vertical-align: middle;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
     height: 0.52rem;
+    left: 1.16rem;
     padding-left: 0.33rem;
     font-size: 0.32rem;
     border: none;
@@ -93,7 +99,7 @@ footer button{
     color: #ffffff;
     background-color: #5fc0cd;
     border: none;
-    font-size: 36px;
+    font-size: 0.36rem;
     text-align: center;
 }
 footer span{
