--- a/css4/example2.css
+++ b/css4/example2.css
@@ -10,8 +10,6 @@ header{
     position: fixed;
     width: 100%;
     height: 0.88rem;
-    line-height:0.88rem;
-    font-size: 0;
     background-color: #5fc0cd;
     color: #fff;
     text-align: center;
@@ -35,6 +33,8 @@ header .close{
 header .register{
     position: absolute;
     right: 0.3rem;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 0.32rem;
 }
 section{
