--- a/css/css6/css6.css
+++ b/css/css6/css6.css
@@ -163,7 +163,8 @@ main .msg-list .time {
     color: #000;
     font-size: 14px;
     white-space: nowrap;
-    text-overflow: ellipsis;
+    /* text-overflow: ellipsis; */
+    text-overflow: clip;
     overflow: hidden;
 }
 main .msg-list .se-icon {
