--- a/css/css8/css/user.css
+++ b/css/css8/css/user.css
@@ -1,103 +1,126 @@
 /* main布局开始 */
+
 main .first-row {
     border-bottom: 1px solid #d9d9d9;
 }
+
 main .company-title {
     margin-top: 20px;
     margin-left: 5px;
 }
+
 main .company-title a {
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
-    color: #000;    
+    color: #000;
 }
+
 main .company-title i {
     margin: 0 10px;
     color: #000;
 }
+
 main .company-title span {
-    color:#29b078;
+    color: #29b078;
 }
+
 /* main布局第二行开始 */
+
 main .second-row {
-    border-bottom:1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
 }
+
 main .col-xs-12 .decration {
     line-height: 60px;
-    color:#999999;
+    color: #999999;
 }
+
 main .second-row a {
-  
     margin-left: 30px;
     padding: 5px;
     color: #000;
     text-decoration: none;
- 
 }
+
 main .second-row a:hover {
     background: #29b078;
     color: #fff;
 }
+
 /* 第三行标题栏 */
+
 main .row h3 {
     margin: 0;
     line-height: 70px;
 }
+
 main .text-row {
-    
-    border-bottom:1px solid #d9d9d9;    
+    border-bottom: 1px solid #d9d9d9;
 }
+
 /* 表格栏 */
+
 main .table-row {
     margin-top: 24px;
 }
+
 main .table-row .col-md-4 {
-    margin:30px 0;
+    margin: 30px 0;
 }
+
 main .table-row table {
-    box-shadow: 0 1px 3px 1px #999; 
+    box-shadow: 0 1px 3px 1px #999;
 }
+
 main .table-row td {
     border: 1px solid #edf1f2;
 }
+
 main .table-row .head-photo {
     width: 120px;
     height: 120px;
 }
-main .table-row .job-title span{
+
+main .table-row .job-title span {
     display: inline-block;
     margin: 10px 0;
     font-weight: bold;
 }
 
 main .table-row .fa-star {
-    padding-left:10px;
+    padding-left: 10px;
     color: #ff5c00;
-    
 }
+
 main .table-row .salary {
     text-align: center;
     line-height: 117px;
 }
+
 main .table-row .right-salary {
     float: right;
     margin-right: 5px;
 }
+
 main .table-row .year {
     padding-left: 10px;
 }
+
 main .table-row .job-list-text {
     color: #999;
 }
+
 main .table-row .text-danger-1 {
     padding-left: 10px;
 }
-main .table-row .text-danger-1,.text-danger-2 {
+
+main .table-row .text-danger-1,
+.text-danger-2 {
     color: #f13123;
-} 
+}
+
 main .table-row .bottom-tips {
     font-size: 12px;
     color: #999;
-
 }
