--- a/css/css8/css/headerPage.css
+++ b/css/css8/css/headerPage.css
@@ -3,91 +3,116 @@ body {
 }
 
 /* header布局开始 */
+
 .top-header {
     position: relative;
     height: 30px;
     color: #29b078;
 }
-.top-header .left-iphone{
+
+.top-header .left-iphone {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
-.top-header .right-icon{
+
+.top-header .right-icon {
     position: absolute;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
 }
-.top-header .right-icon i{
+
+.top-header .right-icon i {
     margin: 0 5px;
 }
+
 /* 面包屑导航栏开始 */
+
 header .bg-nav {
     background: #29b078;
 }
+
 header .navbar {
     margin-bottom: 0;
 }
+
 header .navbar-brand {
     color: #fff;
 }
-header .nav-ul a{
+
+header .nav-ul a {
     color: #fff;
 }
+
 header .nav-ul a:focus {
     background: #29b078;
     outline: none;
 }
+
 header .nav-ul a:hover {
     background: #29b078;
 }
+
 /* main导航开始 */
 
-main .first-row .msg,.msg2 {
-    color:#999;
+main .first-row .msg,
+.msg2 {
+    color: #999;
 }
+
 /* 面导航背景图 */
+
 main .first-row .bg-rocket {
     display: inline-block;
-    width: 43px; 
+    width: 43px;
     height: 65px;
     background: url('../img/sprites.png') -10px -155px
 }
+
 main .first-row .bg-book {
     display: inline-block;
-    width: 60px; 
+    width: 60px;
     height: 65px;
     background: url('../img/sprites.png') -10px -10px;
 }
+
 main .first-row .bg-book {
     display: inline-block;
-    width: 52px; 
+    width: 52px;
     height: 65px;
     background: url('../img/sprites.png') -10px -80px;
 }
+
 /* 标题步奏开始 */
-main .first-row h4{
-    margin:30px 0;
+
+main .first-row h4 {
+    margin: 30px 0;
     font-weight: bold;
 }
+
 main .first-row .class-num {
-    color:#26a26f;
+    color: #26a26f;
 }
-main .first-row .user-total .user-now{
+
+main .first-row .user-total .user-now {
     margin: 10px 0;
 }
+
 /* 如何让学习标题 */
+
 main .stduy-title {
     margin: 120px 0 50px;
 }
 
 /* 第二行开始 */
+
 main .second-row .step-container {
     position: relative;
     line-height: 60px;
-    margin:45px 0;
+    margin: 45px 0;
 }
+
 main .second-row .round-num {
     display: inline-block;
     width: 55px;
@@ -96,32 +121,36 @@ main .second-row .round-num {
     line-height: 55px;
     text-align: center;
     background: #fff;
-    border-radius: 50%; 
+    border-radius: 50%;
 }
+
 main .second-row .user-msg {
     display: inline-block;
     width: 58%;
-    margin-left:5%;
+    margin-left: 5%;
     vertical-align: middle;
     line-height: normal;
     color: #999;
 }
+
 main .second-row .fa-arrow-right {
     position: absolute;
     color: #26a26f;
     right: 3px;
     top: 23px;
 }
+
 /* 第三行学员展示 */
+
 main .third-row .col-sm-3 {
     background: #fff;
-   
 }
+
 main .third-row .talent-container {
     padding: 0 5px;
     box-shadow: 0 0 5px 2px #d8d8d8;
-    
 }
+
 main .third-row .profile-photo {
     display: inline-block;
     width: 108px;
@@ -129,31 +158,36 @@ main .third-row .profile-photo {
     margin: 40px 0 20px;
     border-radius: 50%;
 }
+
 main .third-row .talent-1 {
-     background: url(../img/head-1.jpg) center/100% auto;
+    background: url(../img/head-1.jpg) center/100% auto;
 }
+
 main .third-row .talent-2 {
-     background: url(../img/head-2.jpg) center/100% auto;
+    background: url(../img/head-2.jpg) center/100% auto;
 }
+
 main .third-row .talent-3 {
-     background: url(../img/head-3.jpg) center/100% auto;
+    background: url(../img/head-3.jpg) center/100% auto;
 }
+
 main .third-row .talent-4 {
-     background: url(../img/head-4.jpeg) center/100% auto;
+    background: url(../img/head-4.jpeg) center/100% auto;
 }
+
 main .third-row h4 {
     margin-bottom: 40px;
     font-weight: bold;
 }
+
 main .third-row .talent-intrduce {
- 
     padding: 0 14px 30px;
     text-align: left;
     line-height: 1.5;
     font-size: 14px;
     color: #999;
-
 }
+
 main .third-row .page-point i {
     display: inline-block;
     margin: 20px 5px;
@@ -161,14 +195,16 @@ main .third-row .page-point i {
     height: 10px;
     box-shadow: 0 0 0 1px #999;
     border-radius: 50%;
-
 }
+
 main .third-row .page-point i:first-child {
     background: #26a26f;
 }
+
 /* footer开始 */
+
 footer {
-    margin-top:20px;
+    margin-top: 20px;
     color: #fff;
     background: #26a26f;
 }
@@ -177,14 +213,17 @@ footer .top-row .col-sm-3 .left-title {
     display: inline-block;
     margin-bottom: 50px;
 }
+
 footer .top-row .col-sm-3 .center-title {
     display: inline-block;
     margin-bottom: 22px;
 }
+
 footer .top-row .col-sm-3 .right-title {
     display: inline-block;
     margin-bottom: 10px;
 }
+
 footer .top-row .col-sm-4 i {
     display: inline-block;
     padding: 8px 8px 10px;
@@ -192,39 +231,47 @@ footer .top-row .col-sm-4 i {
     border-left: 2px solid #fff;
     margin-left: 16px;
 }
+
 footer .top-row a {
     text-decoration: none;
     color: #fff;
 }
+
 footer .top-row a:nth-child(odd) {
-    margin-right:20px;
-} 
+    margin-right: 20px;
+}
+
 footer .top-row .right-title {
     margin-bottom: 3px;
 }
+
 /* footer文字 */
+
 footer .text-footer {
-    margin-top:30px;
+    margin-top: 30px;
     margin-bottom: 0;
     border-top: 1px solid #32c086;
     vertical-align: bottom;
     color: #fff;
     white-space: pre-wrap;
 }
-footer .top-row  .col-sm-5 .center-title{
+
+footer .top-row .col-sm-5 .center-title {
     position: relative;
     top: -5px;
 }
+
 /* 大于996px的媒体查询 */
-@media screen and (min-width : 997px){
+
+@media screen and (min-width: 997px) {
     header .left-iphone {
         margin-left: 117px;
     }
-    header .right-icon{
+    header .right-icon {
         margin-right: 145px;
     }
     /* 面包式导航栏 */
-    header .navbar-brand{
+    header .navbar-brand {
         line-height: 50px;
     }
     header .nav-ul {
@@ -245,7 +292,7 @@ footer .top-row  .col-sm-5 .center-title{
         width: 100%;
         height: 4px;
         background: #fff;
-        margin-top:2px;
+        margin-top: 2px;
         margin-left: -50px;
     }
     header .nav-ul li:hover::after {
@@ -266,14 +313,14 @@ footer .top-row  .col-sm-5 .center-title{
         text-align: left;
     }
     main .first-row .col-sm-3 {
-        margin-top:150px;
+        margin-top: 150px;
     }
     /* 第四行公司 */
     main .fourth-row .company-box {
         float: left;
         text-align: center;
         width: 19%;
-        margin :  0 0.5%; 
+        margin: 0 0.5%;
         line-height: 160px;
         background: #fff;
         box-shadow: 0 0 2px 1px #d8d8d8;
@@ -323,17 +370,16 @@ footer .top-row  .col-sm-5 .center-title{
         margin-top: 35px;
         color: #fff;
     }
-    footer .top-row  .col-sm-4 p {
+    footer .top-row .col-sm-4 p {
         margin-top: 31px;
     }
-   
-     footer .top-row a {
+    footer .top-row a {
         position: relative;
     }
     footer .top-row a::after {
         content: "";
         position: absolute;
-        left:0;
+        left: 0;
         bottom: -6px;
         visibility: hidden;
         height: 3px;
@@ -346,18 +392,20 @@ footer .top-row  .col-sm-5 .center-title{
     footer .text-footer {
         padding-top: 20px;
         line-height: 15px;
-    } 
+    }
 }
+
 /* 大于768px的媒体查询 小于996px*/
-@media screen and (min-width : 768px) and (max-width : 996px){
+
+@media screen and (min-width: 768px) and (max-width: 996px) {
     header .left-iphone {
         margin-left: 117px;
     }
-    header .right-icon{
+    header .right-icon {
         margin-right: 145px;
     }
     /* 面包式导航栏 */
-    header .navbar-brand{
+    header .navbar-brand {
         line-height: 50px;
     }
     header .nav-ul {
@@ -378,7 +426,7 @@ footer .top-row  .col-sm-5 .center-title{
         width: 100%;
         height: 4px;
         background: #fff;
-        margin-top:2px;
+        margin-top: 2px;
         margin-left: -50px;
     }
     header .nav-ul li:hover::after {
@@ -399,14 +447,14 @@ footer .top-row  .col-sm-5 .center-title{
         text-align: left;
     }
     main .first-row .col-sm-3 {
-        margin-top:150px;
+        margin-top: 150px;
     }
     /* 第四行公司 */
     main .fourth-row .company-box {
         float: left;
         text-align: center;
         width: 100%;
-        margin : 5px 0; 
+        margin: 5px 0;
         line-height: 160px;
         background: #fff;
         box-shadow: 0 0 2px 1px #d8d8d8;
@@ -457,7 +505,7 @@ footer .top-row  .col-sm-5 .center-title{
         margin-top: 35px;
         color: #fff;
     }
-    footer .top-row  .col-sm-4 p {
+    footer .top-row .col-sm-4 p {
         margin-top: 31px;
     }
     footer .top-row a {
@@ -466,7 +514,7 @@ footer .top-row  .col-sm-5 .center-title{
     footer .top-row a::after {
         content: "";
         position: absolute;
-        left:0;
+        left: 0;
         bottom: -6px;
         visibility: hidden;
         height: 3px;
@@ -475,35 +523,38 @@ footer .top-row  .col-sm-5 .center-title{
     }
     footer .top-row a:hover::after {
         visibility: visible;
-    } 
+    }
     footer .text-footer {
         padding-top: 20px;
         line-height: 15px;
-    } 
+    }
 }
+
 /* 小于768px */
-@media screen and (max-width : 768px){
+
+@media screen and (max-width: 768px) {
     header .navbar-toggle {
         background: #47d197;
     }
-    header .navbar-toggle:hover,.navbar-toggle:active {
+    header .navbar-toggle:hover,
+    .navbar-toggle:active {
         background: #26a26f;
     }
     header .icon-bar {
-        background:  #308964;
+        background: #308964;
     }
     header .nav-ul {
-        margin:0;
+        margin: 0;
     }
     header .nav-ul a:hover {
-        color:#308964;
+        color: #308964;
     }
     /* main标题步奏开始 */
     main .first-row {
         height: auto;
     }
     main .first-row .col-sm-3 {
-        margin-top:100px;
+        margin-top: 100px;
     }
     main .first-row .same-class {
         text-align: center;
@@ -518,7 +569,7 @@ footer .top-row  .col-sm-5 .center-title{
     /* 第四行公司 */
     main .fourth-row .company-box {
         text-align: center;
-        margin:10px 15px;
+        margin: 10px 15px;
         line-height: 160px;
         background: #fff;
         box-shadow: 0 0 3px 2px #d8d8d8;
@@ -526,11 +577,11 @@ footer .top-row  .col-sm-5 .center-title{
     main .fourth-row .company-box img {
         vertical-align: middle;
     }
-     /* 第五行友情链接 */
-     main .fifth-row .link-box {
+    /* 第五行友情链接 */
+    main .fifth-row .link-box {
         text-align: center;
-     }
-     main .fifth-row .link-box ul{
+    }
+    main .fifth-row .link-box ul {
         list-style: none;
         width: 100%;
         overflow: hidden;
@@ -554,7 +605,6 @@ footer .top-row  .col-sm-5 .center-title{
         border-radius: 50%;
         background: #999;
     }
-
     main .fifth-row .link-box li::after {
         content: "";
         visibility: hidden;
@@ -574,7 +624,7 @@ footer .top-row  .col-sm-5 .center-title{
         margin-top: 25px;
         color: #fff;
     }
-    footer .top-row  .col-sm-4 p {
+    footer .top-row .col-sm-4 p {
         margin-top: 10px;
     }
     footer .top-row a {
@@ -583,7 +633,7 @@ footer .top-row  .col-sm-5 .center-title{
     footer .top-row a::after {
         content: "";
         position: absolute;
-        left:0;
+        left: 0;
         bottom: -6px;
         visibility: hidden;
         height: 3px;
@@ -592,27 +642,28 @@ footer .top-row  .col-sm-5 .center-title{
     }
     footer .top-row a:hover::after {
         visibility: visible;
-    } 
+    }
     footer .text-footer {
         line-height: 15px;
-    } 
-    footer .text-footer span{
+    }
+    footer .text-footer span {
         display: block;
-
     }
 }
-@media screen and (min-width : 768px) and (max-width : 992px ){
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
     main .step-container .round-num {
         width: 40px;
         height: 40px;
         line-height: 38px;
     }
 }
-@media screen and (max-width : 480px) {
+
+@media screen and (max-width: 480px) {
     main .fifth-row .link-box {
         text-align: left;
-     }
-     main .fifth-row .link-box li {
+    }
+    main .fifth-row .link-box li {
         position: relative;
         float: left;
         width: 50%;
@@ -631,7 +682,6 @@ footer .top-row  .col-sm-5 .center-title{
         border-radius: 50%;
         background: #999;
     }
-
     main .fifth-row .link-box li::after {
         content: "";
         visibility: hidden;
@@ -647,7 +697,9 @@ footer .top-row  .col-sm-5 .center-title{
         visibility: visible;
     }
 }
+
 /* 向上按钮 */
+
 .go-top {
     position: fixed;
     right: 0px;
@@ -655,10 +707,12 @@ footer .top-row  .col-sm-5 .center-title{
     width: 80px;
     height: 80px;
 }
+
 .go-top .fa-arrow-circle-up {
     color: #26a26f;
     margin-top: 10px;
 }
+
 .go-top .text {
     position: absolute;
     width: 15px;
@@ -666,7 +720,8 @@ footer .top-row  .col-sm-5 .center-title{
     background: #26a26f;
     color: #fff;
 }
-@media screen and (max-width : 480px){
+
+@media screen and (max-width: 480px) {
     .go-top {
         position: fixed;
         right: 0px;
