--- a/css/css8/css/headerPage.css
+++ b/css/css8/css/headerPage.css
@@ -736,19 +736,33 @@ footer .top-row .col-sm-5 .center-title {
         position: fixed;
         right: 0px;
         bottom: 250px;
-        width: 45px;
         height: 80px;
+        text-decoration: none;
+        overflow: hidden;
     }
     .go-top .fa-arrow-circle-up {
         color: #26a26f;
         font-size: 2em;
-        margin-top: 10px;
+        vertical-align: top;
+
     }
+    
+    
     .go-top .text {
-        position: absolute;
-        width: 15px;
-        margin-left: 3px;
+        width: 0;
+        vertical-align: top;
         background: #26a26f;
+        writing-mode: vertical-lr;
         color: #fff;
+        transition: width 500ms;
     }
+    
+    .go-top:hover {
+        text-decoration: none;
+    }
+    
+    .go-top:hover .text {
+        width: 20px;
+    }
+    
 }
