--- a/css/css8/css/user.css
+++ b/css/css8/css/user.css
@@ -1,3 +1,4 @@
+
 /* main布局开始 */
 
 main .first-row {
@@ -59,11 +60,49 @@ main .text-row {
     border-bottom: 1px solid #d9d9d9;
 }
 
+/* 背景的东西 */
+main .table-row .bg-container {
+    position: absolute;
+    height: 100%;
+    left: 15px;
+    right: 15px;
+}
+
+main .table-row .bg-hover {
+    position: absolute;
+    visibility: visible;
+    width: 0;
+    height: 0;
+    font-size: 0;
+    color: #fff;
+    background: rgba(0, 0, 0, .3);
+    transition: all 2s;
+}
+main .table-row .col-md-4:hover .bg-hover {
+    visibility: visible;
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    transform: rotate(720deg);
+}
+main .table-row .bg-hover span {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    margin: 20% 0 15%;
+}
+main .table-row .bg-hover p {
+    padding: 0 10px;
+    text-indent: 2em;
+    line-height: 1.6;
+}
 /* 表格栏 */
 
 main .table-row {
+    position: relative;
     margin-top: 24px;
 }
+
 
 main .table-row .col-md-4 {
     margin: 30px 0;
@@ -71,6 +110,7 @@ main .table-row .col-md-4 {
 
 main .table-row table {
     box-shadow: 0 1px 3px 1px #999;
+    margin-bottom: 0;
 }
 
 main .table-row td {
@@ -78,10 +118,15 @@ main .table-row td {
 }
 
 main .table-row .head-photo {
-    width: 120px;
-    height: 120px;
+    width: 30%;
+    height: auto;
+    margin-right: 2%;
 }
-
+main .table-row .job-title {
+    display: inline-block;
+    width: 63%;
+    vertical-align: middle;
+}
 main .table-row .job-title span {
     display: inline-block;
     margin: 10px 0;
@@ -123,4 +168,19 @@ main .table-row .text-danger-1,
 main .table-row .bottom-tips {
     font-size: 12px;
     color: #999;
+}
+@media screen and (max-width : 480px) {
+    main .table-row .head-photo {
+        width: 80px;
+        height: 80px;
+    }
+    
+    
+}
+@media screen and (max-width : 680px) {
+    .to-class {
+        display: block;
+        text-align: center;
+        margin-bottom: 5px;
+    }
 }
