--- a/css/css8/css/job.css
+++ b/css/css8/css/job.css
@@ -93,6 +93,14 @@ main .company-info .company-times {
         margin: 20px 0 20px 0;
         color:#999;
     }
+    main .company-info .company-times {
+        padding-right: 5px;
+        padding-left: 5px;
+        margin: 20px 0;
+        color:#999;
+        text-indent: 2em;
+    }
+    
 }
 @media screen and (min-width : 481px) {
     main .company-info img {
