--- a/css/css12/src/scss/list.scss
+++ b/css/css12/src/scss/list.scss
@@ -14,108 +14,62 @@ main {
             list-style: none;
             padding-left: .68rem;
             border-bottom:1px solid #e1e5e7;
-            li {
-                margin-bottom: .3rem;
+            .se-icon {
+                display: inline-block;
+                width: .24rem;
+                height: .24rem;
+                margin-left: -.38rem;
+                margin-right: .16rem;
+                background: url('../img/sprite.png') -1.4rem -.2rem;
             }
-           
+            .lo-icon {
+                display: inline-block;
+                width: .2rem;
+                height: .24rem;
+                margin-left: -0.38rem;
+                margin-right: .16rem;
+                background: url('../img/sprite.png') -0.2rem -0.2rem;
+            }
+            li {
+               line-height: .48rem;
+            }
+            .data {
+                text-overflow: ellipsis;
+                font-size: .28rem;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+            .time {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            .server,.location {
+                color:#999;
+                font-size: .26rem;
+            }
+            .location {
+                margin-bottom: .2rem;
+            }
         }
+        
         .salary-box {
             float: right;
+            white-space: nowrap;
             font-size: .3rem;
+            line-height: .4rem;
             color:#e9532b;
             .go {
                 display: inline-block;
-                padding: .18rem .1rem;
+                padding: 9px 5px;
                 margin-right: .15rem;
                 margin-left: .1rem;
-                background: url('../img/sprites.png') -0.4rem -0.1rem;
+                background: url('../img/sprite.png') -40px -10px;
+              
+                vertical-align: bottom;
             }
         }
     }
 }
-$nav-height:.8rem;
-$nav-font:.3rem;
-$nav-color:#999;
-$sparator-bgcolor:#e1e5e7;
-$nav-label-bor-bgcolor:#e1e5e7;
-$nav-label-active-bgcolor:#5fc0cd;
-$nav-triangle-border-width:.08rem;
-$nav-triangle-r:.16rem;
-$nav-triangle-border-color:#afbac0;
-@mixin translateY{
-    top:50%;
-    transform: translateY(-50%);
-}
-.nav-fixed {
-    position: fixed;
-    width: 100%;
-    .drop-nav {
-        display: flex;
-        height: $nav-height;
-        color:$nav-color;
-        input {
-            width: 0;
-            height: 0;
-            &:checked ~ul{
-                display: block;
-            }
-        }
-        label {
-            display: inline-block;
-            width: 100%;
-            text-align: center;
-            font-size: $nav-font;
-            border-bottom: 1px solid $nav-label-bor-bgcolor;
-            background: #fff;
-            &:active {
-                background: $nav-label-active-bgcolor;
-                color: #fff;
-            }
-            &::after {
-                content: "";
-                position: absolute;
-                right: $nav-triangle-r;
-                @include translateY();
-                width: 0;
-                height: 0;
-                border-top: $nav-triangle-border-width solid $nav-triangle-border-color;
-                border-right: $nav-triangle-border-width solid transparent;
-                border-left: $nav-triangle-border-width solid transparent;
-            }
-        }
-        .drop-container {
-            position: relative;
-            flex: 1;
-            font-size: 0;
-            line-height: .8rem;
-            &::after {
-                content: "";
-                position: absolute;
-                @include translateY();
-                width: 1px;
-                height: 80%;
-                background: $sparator-bgcolor;
-            }
-            ul{
-                display: none;
-                position: absolute;
-                z-index: 1;
-                width: 100%;
-                margin-top:-.1rem;
-                padding: 0;
-                font-size: $nav-font;
-                list-style: none;
-                text-align: center;
-                background: #fff;
-            }
-            li {
-                line-height: 1.5;
-                &:hover {
-                    background: #d8d8d8;
-                    color:#fff;
-                }
-            }
-        }
-    }
-
-}
+@import "component";
+ @import "list-footer";
