--- a/css/css13/src/scss/headPage.scss
+++ b/css/css13/src/scss/headPage.scss
@@ -5,19 +5,28 @@ $header-height:.88rem;
 $header-bgcolor:#5fc0cd;
 $text-color-white:#fff;
 header {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    text-align: center;
-    height: $header-height;
+    line-height: $header-height;
     background: $header-bgcolor;
-    color:$text-color-white;
-      
+    .find-list {
+        display: inline-block;
+        width: .38rem;
+        height: .04rem;
+        border-top: .04rem solid #fff;
+        padding: .1rem 0;
+        margin-left: .22rem;
+        border-bottom: .04rem solid #fff;
+        vertical-align: middle;
+        background: #fff;
+        background-clip: content-box;
+    }     
 }
 
 //给body初始字体尺寸，子级文字继承这个
-$body-bgcolor:#fff;
-
+$body-bgcolor:#f0f0f0;
+@mixin translateY{
+    top:50%;
+    transform: translateY(-50%);
+}
 body {
     margin:0;
     font-size: .32rem;
@@ -26,91 +35,83 @@ body {
 
 //使用混合器
 $bottom-width:1px;
-$bottom-color:#e1e5e7;
-@mixin borer-bottom ($width:$bottom-width,$color:$bottom-color){
-    border-bottom: $width solid $color;
-}
-@mixin translateY{
-    top:50%;
-    transform: translateY(-50%);
-}
-main {
-    padding-top:.88rem;
-    padding-bottom: 1.44rem;
-    section{
-        display: flex;
-        align-items: center;
-        height: 3.28rem;
-        color:#fff;
-        background: url(../img/bgImg.png) no-repeat center/cover;
-        .head-img {
-            width: 1.69rem;
-            height: 1.69rem;
-            margin-left: .33rem;
-            margin-right: .4rem;
-        }
-        .user-msg {
-            p{
-                margin-top:.16rem;
-                padding-left: .32rem;
-            }
-        }
-        .loc-icon{
-            position: absolute;
-            width: .18rem;
-            height: .23rem;
-            margin: .06rem 0 0 -0.3rem;
-          
-        }     
-    }
-    .skill {
-        position: relative;
-        padding-left: .6rem;
-        line-height: 1rem;
-        @include borer-bottom;
-        &::before {
-            content: "";
-            position: absolute;
-            @include translateY;
-            left: .3rem;
-            width: .03rem;
-            height: .26rem;
-            background: #5fc0cd;
-        }
-    }
-    ul{
-        @import "component";
-        margin:0;
-        padding-left: .36rem;
-        list-style: none;
-        li {
-            @include borer-bottom;
-            display: flex;
-            align-items: center;    
-            padding: .33rem 0;
-        }
-        .condition {
-            div {
-                display: inline-block;
-            }
-            img {
-                width: .24rem;
-                height: .23rem;
-                margin-right: .12rem;
-            }
-        }
-        .intrduce {
-            .left-text {
-                white-space: nowrap;
-            }
-        }
-        .left-text {
-            color: #999;        
-        }
-        .text-saraly {
-            color:#e26163;
-        }
-    }
+$bottom-color:#c9c9c9;
+@mixin border ($width:$bottom-width,$color:$bottom-color){
+    border: $width solid $color;
 }
 
-@import 'footer';
+main {
+    padding: 0 .38rem; 
+  
+    .title-box {
+        margin:.28rem 0;
+   @include border;
+        
+        line-height: 1.16rem;
+        text-align: center;
+        color: #9a9a9a;
+        background: #fff;
+        img {
+            float: right;
+            width: .24rem;
+            height: .4rem;
+            margin-right: .2rem;
+            margin-top: .4rem; 
+        }
+    }
+    .game-body {
+        @include border;
+        padding-bottom: .1rem;
+        background: #fff;
+        text-align: center;
+         .verson {
+            display: inline-block;
+            width: 80%;
+            line-height: 1.35rem;
+            background: #69d1e9;
+            color:#fff;
+            text-decoration: none;
+        }
+        .easy {
+            margin-top: .3rem;
+        }
+        .user-num {
+            line-height: .78rem;
+            color: #787878;
+            font-size: .24rem;
+        }
+        .go-page {
+            position: fixed;
+            margin-left: .2rem;
+            margin-top: .2rem;
+            border-left: .28rem solid #fbb435;
+            border-top: .28rem solid transparent;
+            border-bottom: .28rem solid transparent;
+        }
+    }
+    .game-name {
+        line-height: .9rem;
+        color:#fbb435;
+        font-size: .38rem;
+        border-bottom: .01rem solid currentColor;   
+       
+    }
+    .leaf-point {
+        line-height: .3rem;
+        i {
+            display: inline-block;
+            width: .18rem;
+            height: .18rem;
+            border-radius: 50%;
+            vertical-align: middle;
+        }
+        .one {
+            background: #69d1e9;
+        }
+    }
+  
+   
+    
+}
+
+
