--- a/css/new13/src/scss/headPage.scss
+++ b/css/new13/src/scss/headPage.scss
@@ -80,10 +80,11 @@ main {
             color: #787878;
             font-size: .24rem;
         }
+        // 小三角fixed的定位
         .go-page {
             position: fixed;
             margin-left: .2rem;
-            margin-top: .2rem;
+            margin-top: .22rem;
             border-left: .28rem solid #fbb435;
             border-top: .28rem solid transparent;
             border-bottom: .28rem solid transparent;
@@ -96,6 +97,7 @@ main {
         border-bottom: .01rem solid currentColor;   
        
     }
+    // 四个小圆点
     .leaf-point {
         line-height: .3rem;
         i {
