--- a/css/new13/src/scss/headPage.scss
+++ b/css/new13/src/scss/headPage.scss
@@ -3,7 +3,64 @@
 //初始化变量
 $header-height:.88rem;
 $header-bgcolor:#5fc0cd;
+$page-bgcolor:#5fc0cd;
 $text-color-white:#fff;
+
+//给body初始字体尺寸，子级文字继承这个
+$body-bgcolor:#f0f0f0;
+@mixin translateY{
+    top:50%;
+    transform: translateY(-50%);
+}
+html{
+    height: 100%;
+}
+body {
+    margin:0;
+    height: 100%;
+    font-size: .32rem;
+    background: $body-bgcolor;
+}
+
+.page-container {
+    display: flex;  
+    height: 100%;
+    overflow: hidden;
+    .select-list {
+        flex:none;
+        flex-basis: 75%;
+        background: #fff;
+        color: #5fc0cd;
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            padding: .15rem 0 .15rem .4rem;
+            border-bottom: 1px solid #d8d8d8;
+        }
+        .fa {
+            width: .5rem;
+            margin-right: .2rem;
+            border: 3px solid currentColor;
+            text-align: center;
+            line-height: .5rem;
+            border-radius: 50%;
+        }
+        .fa-chevron-right {
+            float: right;
+            border: none;
+            margin-top: .05rem;
+        }
+    }
+    .page{
+    flex-shrink: 0;
+    flex-basis: 100%;
+    background: $page-bgcolor;
+}
+}
+
+
 header {
     line-height: $header-height;
     background: $header-bgcolor;
@@ -21,17 +78,7 @@ header {
     }     
 }
 
-//给body初始字体尺寸，子级文字继承这个
-$body-bgcolor:#f0f0f0;
-@mixin translateY{
-    top:50%;
-    transform: translateY(-50%);
-}
-body {
-    margin:0;
-    font-size: .32rem;
-    background: $body-bgcolor;
-}
+
 
 //使用混合器
 $bottom-width:1px;
@@ -106,6 +153,7 @@ main {
             height: .18rem;
             border-radius: 50%;
             vertical-align: middle;
+            background: #787878;
         }
         .one {
             background: #69d1e9;
