--- a/js/js2/bulid/css/allot.css
+++ b/js/js2/bulid/css/allot.css
@@ -26,7 +26,7 @@ body {
 main {
   padding-top: .88rem; }
   main h4 {
-    margin: 0 .4rem;
+    margin: .1rem .4rem;
     text-align: center;
     line-height: .88rem;
     box-shadow: .02rem .02rem  .02rem #d8d8d8; }
@@ -35,24 +35,19 @@ main {
     height: 1.16rem;
     align-items: center;
     margin-top: .3rem; }
+    main .id-container img {
+      width: .6rem;
+      height: .6rem;
+      vertical-align: -.16rem;
+      border-radius: 50%; }
     main .id-container div {
       flex-basis: 50%;
       margin-left: .2rem;
       line-height: 1rem; }
-    main .id-container .kill-id span:first-child {
-      color: red; }
-    main .id-container span:first-child {
+    main .id-container .players-num {
       display: inline-block;
-      width: 1rem;
-      margin-right: .2rem;
-      font-size: .6rem;
-      text-align: center;
-      background: yellow;
-      border-radius: 50%;
-      box-shadow: 0 0 .05rem .01rem #fff inset; }
-    main .id-container span:last-child {
-      display: inline-block;
-      width: .3rem; }
+      width: .3rem;
+      text-align: center; }
   main .input-player {
     position: absolute;
     left: 50%;
