--- a/js/js2/bulid/css/show.css
+++ b/js/js2/bulid/css/show.css
@@ -10,6 +10,18 @@ body {
   height: 100%;
   background: #29bde0; }
 
+html {
+  height: 100%; }
+
+body {
+  margin: 0; }
+
+html {
+  height: 100%; }
+
+body {
+  margin: 0; }
+
 header {
   display: flex;
   position: fixed;
@@ -21,7 +33,8 @@ header {
   border-bottom: .01rem solid #74d4eb;
   font-size: 0.34rem;
   color: #fff;
-  background: #29bde0; }
+  background: #29bde0;
+  z-index: 2; }
   header i {
     display: inline-block; }
     header i:first-child {
