--- a/js/js2/src/scss/show.scss
+++ b/js/js2/src/scss/show.scss
@@ -31,52 +31,7 @@ body{
     height: 100%;
     background: $body-bgcolor;
 }
-header {
-    display: flex;
-    position: fixed;
-    top:0;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: $header-height;
-    border-bottom: .01rem solid #74d4eb;
-    font-size: $center-font-size;
-    color: #fff;
-    background: $body-bgcolor;
-    i {
-        display: inline-block;
-        &:first-child {
-            width: .3rem;
-            height: .3rem;
-            border-left: .05rem solid;
-            border-bottom: .05rem solid;
-            transform: rotate(45deg);
-            margin-left: $justify-size;
-        }
-        &:last-child {
-            position: relative;
-            width: .5rem;
-            height: .4rem;
-            margin-right: $justify-size;
-            &::before {
-                content: "";
-                @include translateY();
-                width: 100%;
-                height: .05rem;
-                background: currentColor;
-                transform:translateY(-50%) rotate(45deg); 
-            }
-            &::after{
-                content: "";
-                @include translateY();
-                width: 100%;
-                height: .05rem;
-                background: currentColor;
-                transform:translateY(-50%) rotate(-45deg); 
-            }
-        }
-    }
-}
+@import 'showHead';
 main{
     position: absolute;
     top: 1.8rem;
